Добавлены новые файлы + подключение MySQL
