# internal/controller/http/v1/dto/healthzdto.go
@@ -1,0 +1,5 @@
+package dto
+
+type HealthzResponse struct {
+	Status string `json:"status" example:"ok"`
+}
