# internal/controller/http/v1/dto/rabbitdto.go
@@ -1,0 +1,11 @@
+package dto
+
+type RabbitSendRequest struct {
+	Queue string `json:"queue" binding:"required" example:"test-queue"`
+	Data  any    `json:"data"`
+}
+
+type RabbitSendResponse struct {
+	Queue string `json:"queue" example:"test-queue"`
+	Data  any    `json:"data"`
+}
